<?xml version="1.0"?>
<package format="3">
  <name>mpc_cartesian_planner</name>
  <version>0.1.0</version>
  <description>Cartesian trajectory planner (TT) + window-search progress monitor for OCS2 mobile manipulator MPC.</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2_ros</depend>

  <depend>ocs2_core</depend>
  <depend>ocs2_mpc</depend>
  <depend>ocs2_msgs</depend>
  <depend>ocs2_ros_interfaces</depend>
  <depend>ocs2_mobile_manipulator</depend>
  <depend>ocs2_pinocchio_interface</depend>

  <depend>pinocchio</depend>
  <depend>eigen</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
